<?xml version="1.0"?>
<package format="2">
  	<name>robotec_velocity_controller</name>
  	<version>1.0.0</version>
  	<description>Velocity controller for robots powered with ROS</description>

  	<!-- One maintainer tag required, multiple allowed, one person per tag -->
  	<maintainer email="illya.shvarov@gmail.com">Illia Shvarov</maintainer>

  	<!-- One license tag required, multiple allowed, one license per tag -->
  	<license>Apache License 2.0</license>

	<!-- Build dependencies -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>controller_manager</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<!-- Compilation-time dependencies -->
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>controller_manager</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
 	<build_export_depend>std_srvs</build_export_depend>
 	<build_depend>message_generation</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>

	<!-- Execution dependencies -->
	<exec_depend>dynamic_reconfigure</exec_depend>
  	<exec_depend>message_runtime</exec_depend>
  	<exec_depend>controller_manager</exec_depend>
  	<exec_depend>roscpp</exec_depend>
  	<exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
  	<exec_depend>std_msgs</exec_depend>
  	<exec_depend>std_srvs</exec_depend>

</package>
